# crates_io_updates_bot

./: Cargo.toml
src/: main.rs
