[package]
name = "updates-bot"
version = "0.1.0"
authors = ["Ashley <ashley.ruglys@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix_bot_api = { git = "https://github.com/expenses/matrix_bot_api", branch = "crates-bot-changes" }
crates_io_api = "0.5.1"
structopt = "0.3.1"
lazy_static = "1"
url = "2"
